--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -17,3 +17,8 @@ $pink      : #ff79c6;
 $purple    : #bd93f9;
 $red       : #ff5555;
 $yellow    : #f1fa8c;
+$black_80  : rgba(0, 0, 0, 0.8);
+
+/* Element Deco
+   -------------------------------------------------------------------------- */
+$border-default: 1px solid $black_80;
