--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -52,6 +52,13 @@ button {
   }
 }
 
+%headline-default {
+  font-family: Roboto;
+  font-weight: 300;
+  font-size  : 1.1rem;
+  padding    : 15px;
+  margin: 0;
+}
 
 
 input[type="text"] {
@@ -81,17 +88,13 @@ article {
 
   h2 { 
     // ! If we are changing almost everything about font's props, is h2 really a good place for this? Perhaps a more semantic class or element could be used. This is just overriding the h2 styles which could be otherwise left untouched.
+    @extend %headline-default;
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid $black_80;
     box-shadow : 0 0 3px 2px rgba(0, 0, 0, .1);
-    font-family     : Roboto;
-    font-weight     : 300;
-    font-size       : 1.1rem;
-    margin          : 0 0 2rem 0;
     width           : 100%;
     text-align      : center;
-    padding         : 15px;
     // background-color: $comment;
 
     .material-icons {
@@ -164,14 +167,18 @@ ul {
 /* Testing
    -------------------------------------------------------------------------- */
 .grid {
-  max-width            : 1000px;
+  max-width            : 1200px;
   display              : grid;
   margin               : 0 auto;
   padding              : 10px;
-  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-template-rows   : auto;
   grid-auto-rows       : minmax(220px, auto);
   grid-gap             : 10px;
+}
+
+.grid-aside {
+  display: grid;
 }
 
 .wrapper {
@@ -179,9 +186,7 @@ ul {
   margin: auto;
   padding: 0 10px;
   display: flex;
-  align-items: center;
-
-  
+  align-items: center; 
 }
 
 .lg {
@@ -237,8 +242,11 @@ ul {
 }
 
 #featured_article {
-  grid-column-start: 1;
-  grid-column-end: -1;
+  grid-column: 1 / -1;
+
+  @media screen and (min-width: 908px){
+    grid-column-end: -2;
+  }
 
   .lg {
     color: $red;
@@ -260,4 +268,57 @@ ul {
     border-bottom: 1px solid $black_80;
     margin-bottom: 15px;
   }
+}
+
+aside {
+  grid-column: 1 / -1;
+  grid-row-gap: 10px;
+
+  @media screen and (min-width: 908px) {
+    grid-column: span 1 / -1;
+  }
+}
+
+.aside-content {
+  flex-direction: column;
+  align-items: flex-start;
+
+  h2 {
+    @extend %headline-default;
+    padding: 0 0 0 24px;
+
+    .material-icons {
+      margin-right: .5rem;
+    }
+  }
+
+  ul {
+    margin: 0;
+    // display: flex;
+    // flex-direction: column;
+    // flex-grow: 1;
+    // justify-content: flex-start;
+
+    li {
+      padding: 10px 0;
+      color: $foreground;
+      transition: color 150ms ease;
+
+      &:hover {
+        color: $pink;
+      }
+    }
+  }
+}
+
+.trending {
+  color: $orange;
+}
+
+.popular {
+  color: $red;
+}
+
+.just_added {
+  color: $cyan;
 }
