--- a/src/scss/base/_index.scss
+++ b/src/scss/base/_index.scss
@@ -11,10 +11,26 @@
    ---------------------------------- */
 @import 'variables';
 
+/* SASS Helper Functions
+   ---------------------------------- */
+@import 'functions';
+
 /* Keyframe Animations
    ---------------------------------- */
 @import 'animation';
 
+/* Layout Containers
+   ---------------------------------- */
+@import 'layout';
+
 /* Element selector styles
    ---------------------------------- */
 @import 'base';
+
+/* Typography Styles
+   ---------------------------------- */
+@import 'typography';
+
+/* Form element styles
+   ---------------------------------- */
+@import 'forms';
