--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -22,3 +22,7 @@ $black_80  : rgba(0, 0, 0, 0.8);
 /* Element Deco
    -------------------------------------------------------------------------- */
 $border-default: 1px solid $black_80;
+
+/* Layout
+   -------------------------------------------------------------------------- */
+$max-width: 1200px;
