Search bar modifications
Search bar now spans full grid on mobile, with a centered search bar. On larger screens it only spans the same columns as the featured article, and is left aligned.

Closes #5

--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -36,5 +36,10 @@ input[type="text"] {
   grid-column-start: 1;
   grid-column-end  : -1;
 
+  @media screen and   (min-width: 908px) {
+    justify-content: flex-start;
+    grid-column-end: -2;
+  }
+
   .material-icons { color: $foreground; }
 }
