--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -19,6 +19,10 @@ $red       : #ff5555;
 $yellow    : #f1fa8c;
 $black_80  : rgba(0, 0, 0, 0.8);
 
+/* Font Variables
+   -------------------------------------------------------------------------- */
+$google-font-url: 'https://fonts.googleapis.com/css?family=Nunito|Roboto';
+
 /* Element Deco
    -------------------------------------------------------------------------- */
 $border-default: 1px solid $black_80;
