--- a/src/scss/base/_animation.scss
+++ b/src/scss/base/_animation.scss
@@ -12,12 +12,27 @@
   *    Timing: .8 scale -> 33%, 1.1 scale -> 66%, 1.0 scale -> 100%
   */
 
-@keyframes bounce-in {
+@-webkit-keyframes bounce-in {
   33% {
-    transform: scale3d(.8, .8, .8);
+    -webkit-transform: scale3d(.8, .8, .8);
+            transform: scale3d(.8, .8, .8);
   }
 
   66% {
-    transform: scale3d(1.1, 1.1, 1.1);
+    -webkit-transform: scale3d(1.1, 1.1, 1.1);
+            transform: scale3d(1.1, 1.1, 1.1);
   }
 }
+
+@keyframes bounce-in {
+  33% {
+    -webkit-transform: scale3d(.8, .8, .8);
+            transform: scale3d(.8, .8, .8);
+  }
+
+  66% {
+    -webkit-transform: scale3d(1.1, 1.1, 1.1);
+            transform: scale3d(1.1, 1.1, 1.1);
+  }
+}
+  
